--- a/styles.css
+++ b/styles.css
@@ -687,3 +687,128 @@ body{
     gap: 0.6rem;
 }
 
+.rent-para{
+    text-align: center;
+    font-family: "Poppins";
+    font-weight: 400;
+    font-size: 2.125rem;
+    margin-bottom: 7rem;
+}
+
+.number-location{
+    max-width: 71.875rem;
+    height: 11.125rem;
+    margin: 0 9rem;
+    display: flex;
+    gap: 3.5rem;
+}
+
+.one-parent{
+    display: flex;
+    flex-direction: column;
+    width: 21.75rem;
+    height: 11.125rem; 
+    border: 1px solid #000000;
+   
+}
+
+.number-absolute{
+    width: 4rem;
+    height: 3.25rem;
+    border-radius: 0.313rem;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    margin-top: -4rem;
+    margin-bottom: 2rem;
+}
+
+.abs-1{
+    width: 2.375rem;
+    height: 2rem;
+    color: #E21E26;
+    font-family:"Poppins";
+    font-weight: 400;
+    font-size: 2.5rem;
+    text-align: center;
+    
+}
+
+.one-parent-child{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.image-1-parent{
+    width: 2.375rem;
+    height: 2.875rem;
+}
+
+.image-1{
+    width: 100%;
+}
+
+.location-desc-parent{
+    width: 13.938rem;
+    height: 4.375rem;
+}
+
+.location-desc-para{
+    font-family: "Helvetica";
+    font-weight: 400;
+    font-size: 0.875rem;
+    text-align: center;
+    opacity: 80%;
+    line-height: 1.356;
+    text-align: center;
+}
+
+.image-2-parent{
+    width: 2.875rem;
+    height: 2.875rem;
+}
+
+.image-2{
+    width: 100%;
+}
+
+.calendar-desc-parent{
+    width: 11.875rem;
+    height: 2.313rem;
+}
+
+.calendar-desc-para{
+    opacity: 80%;
+    font-family: "Helvetica";
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.356;
+    text-align: center;
+}
+
+.image-3-parent{
+    width: 3.125rem;
+    height: 2.688rem;
+}
+
+.image-3{
+    width: 100%;
+}
+
+.car-desc-parent{
+    width: 16.875rem;
+    height: 4.375rem;
+}
+
+.car-desc-para{
+    font-family: "Helvetica";
+    font-weight: 400;
+    font-size: 0.875rem;
+    opacity: 80%;
+    line-height: 1.356;
+    text-align: center;
+}
+
