--- a/styles.css
+++ b/styles.css
@@ -1006,18 +1006,18 @@ body{
 .place-ras {
     display: flex;
     align-items: center;
-    position: relative; /* Make the parent container a reference point for the line */
-    gap: 0.8rem; /* Space between icon and text */
+    position: relative; 
+    gap: 0.8rem;
 }
 
 .line {
-    width: 1px; /* Thin vertical line */
-    height: 100%; /* Full height of the parent container */
-    background-color: #fff; /* Line color */
-    opacity: 40%; /* Match the opacity with the text */
-    position: absolute; /* Position the line absolutely */
-    right: -2rem; /* Adjust position relative to the parent */
-    top: 0; /* Align with the top of the parent */
+    width: 1px; 
+    height: 100%;
+    background-color: #fff;
+    opacity: 40%;
+    position: absolute;
+    right: -2rem;
+    top: 0;
 }
 
 
@@ -1032,45 +1032,240 @@ body{
 .faq-container {
     max-width: 71.25rem;
     margin: 0 auto;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
-.eligibility {
+.eligibility{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    /* margin-top: 1rem; */
 }
 
-.eligibility p {
-    margin: 0; 
+.eligibility-parent{
+    width: 66.188rem;
+    padding: 1rem 0 1rem 0;
+    gap: 1rem;
 }
 
-.eligibility img {
-    width: 24px;
-    height: 24px;
-    cursor: pointer;
-}
-
-.book-car{
+.eligibility-para{
     font-family: "Poppins";
     font-weight: 500;
     font-size: 1rem;
-    line-height: 1.2rem;
-   
+    line-height: 1.2;
 }
 
-.age-group{
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+.cross-icon{
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
-.license{
+.age-limit{
+    width: 50rem;
+    height: 1.563rem;
+    
+}
+
+.age-limit-para{
     font-family: "Poppins";
     font-weight: 400;
     font-size: 0.875rem;
     line-height: 1.544;
+    color: #000000;
     opacity: 50%;
-    border-bottom: 1px solid red;
+    margin-bottom: 1.406rem;
+}
+
+.border{
+    width: 71.25rem;
+    height: 0.188rem;
+    padding: 0.094rem, 0, 0.094rem, 0;
+    gap: 0.625rem;
+     background-color: rgba(205, 214, 218, 0.25);
+    /* margin-bottom: 5.5rem; */
+}
+
+.book-time{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 2rem;
+    margin-left: 0;
+    /* gap: 2rem; */
+}
+
+.book-time-parent{
+    width: 50rem;
+    height: 1.188rem;
+    padding-top:1rem;
+    padding-bottom: 2rem;
+
+}
+
+.book-time-para{
+    font-family: "Poppins";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+.plus-icon{
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.footer{
+    background-color: black;
+    color: #fff;
+    margin-top: 7.438rem;
+}
+
+.footer-container{
+    max-width: 82rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-logo{
+    margin-top: 2.5rem;
+}
+
+.footer-links{
+    margin-top: 1.5rem;
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 35.313rem;
+    cursor: pointer;
+}
+
+.home-part{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2.5rem;
+    font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.813rem;
+    line-height: 1.219;
+}
+
+.about-part{
+     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2.5rem;
+    font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.813rem;
+    line-height: 1.219;
+}
+
+.services-part{
+     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2.5rem;
+     font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.813rem;
+    line-height: 1.219;
+}
+
+.company-name{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2.9rem;
+     font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.813rem;
+    line-height: 1.219;
+}
+
+.footer-carrer{
+    margin-top: -0.5rem;
+}
+
+.terms{
+    margin-top: -0.9rem;
+}
+
+.footer-socials{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+
+.follow{
+    font-family: "Poppins";
+    font-weight: 600;
+    font-size: 0.875rem;
+    line-height: 1.313;
+}
+
+.secure{
+    display: flex;
+    gap: 1rem;
+}
+
+.down{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.footer-sub{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.functions{
+    display: flex;
+    gap: 1.5rem;
+    font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.813rem;
+    line-height: 1.219;
+    cursor: pointer;
+}
+
+/* .company-name{
+    font-family: "Poppins";
+} */
+
+.al-habtoor{
+    display: flex;
+    font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.813rem;
+    line-height: 1.219;
+    margin-top: -0.5rem;
+    cursor: pointer;
+}
+
+.footer-line{
+    width:100%;
+    margin-top: 1.5rem;
+    border: 0.5px solid rgba(255, 255, 255, 0.5);
+}
+
+.copyright{
+    text-align: center;
+    margin-top: 1.5rem;
+    font-family: "Poppins";
+    font-weight: 500;
+    font-size: 0.75rem;
+    line-height: 1.125;
+    padding-bottom: 1.688rem;
 }
